--- a/Base/Makefile-Includes
+++ b/Base/Makefile-Includes
@@ -16,86 +16,113 @@
 # If not, see <http://www.gnu.org/licenses/>.
 #
 
-BASE    		= amigus
-PATH    		= include
+ifeq ($(findstring /home,$(HOME)), /home)
+  LINUX         = 1
+
+  WILDCARD      = *
+  
+  FD2PRAGMA     = vamos -c ../.vamosrc fd2pragma
+  MKDIR         = mkdir -p
+  MKDIR_SUFFIX  =
+  RM            = rm -rf
+  RM_SUFFIX     =
+  CP            = cp
+  CP_SUFFIX     =
+else
+  AMIGAOS       = 1
+
+  WILDCARD      = \#?
+
+  FD2PRAGMA     = fd2pragma
+  MKDIR         = makedir
+  MKDIR_SUFFIX  = ALL >NIL:
+  RM            = delete
+  RM_SUFFIX     = ALL >NIL:
+  CP            = copy
+  CP_SUFFIX     = ALL CLONE >NIL:
+endif
+
+BASE_NAME  	    = amigus
+TARGET_PATH     = include
 AMIGUS_INCLUDES = include-src
 
-#CAMD_ORIG_CLIB   = $(CAMD_INCLUDES)/include/clib/$(BASE)_protos.h
-#CAMD_ORIG_FD     = $(CAMD_INCLUDES)/fd/$(BASE)_lib.fd
+#CAMD_ORIG_CLIB   = $(CAMD_INCLUDES)/include/clib/$(BASE_NAME)_protos.h
+#CAMD_ORIG_FD     = $(CAMD_INCLUDES)/fd/$(BASE_NAME)_lib.fd
 
-#AMIGUS_SFD    = RAM:$(BASE)_lib.fd
+#AMIGUS_SFD    = RAM:$(BASE_NAME)_lib.fd
 
-AMIGUS_SFD        = $(AMIGUS_INCLUDES)/sfd/$(BASE)_lib.sfd
+AMIGUS_SFD        = $(AMIGUS_INCLUDES)/sfd/$(BASE_NAME)_lib.sfd
 
 default: all
 
 #$(AMIGUS_SFD): $(CAMD_ORIG_FD)
 #	edit FROM $< TO $@ WITH fd_patch
 
-#SFDPATH = $(PATH)/sfd/
-#SFDNAME = $(SFDPATH)$(BASE).sfd
+#SFDPATH = $(TARGET_PATH)/sfd/
+#SFDNAME = $(SFDPATH)$(BASE_NAME).sfd
 #$(SFDNAME): $(AMIGUS_SFD)
-#	-@makedir $(SFDPATH) ALL >NIL:
-#	fd2pragma SPECIAL 112 INFILE $(AMIGUS_SFD) TO $(SFDPATH)
+#	-@$(MKDIR) $(SFDPATH) $(MKDIR_SUFFIX)
+#	$(FD2PRAGMA) SPECIAL 112 INFILE $(AMIGUS_SFD) TO $(SFDPATH)
 
-PRAGMAPATH = $(PATH)/C/pragma/
-PRAGMANAME = $(PRAGMAPATH)$(BASE)_lib.h
+PRAGMAPATH = $(TARGET_PATH)/C/pragma/
+PRAGMANAME = $(PRAGMAPATH)$(BASE_NAME)_lib.h
 $(PRAGMANAME): $(AMIGUS_SFD)
-	-@makedir $(PRAGMAPATH) ALL >NIL:
-	fd2pragma SPECIAL   6 INFILE $(AMIGUS_SFD) TO $(PRAGMAPATH)
+	-@$(MKDIR) $(PRAGMAPATH) $(MKDIR_SUFFIX)
+	$(FD2PRAGMA) SPECIAL   6 INFILE $(AMIGUS_SFD) TO $(PRAGMAPATH)
 
-AMIGAEPATH = $(PATH)/AmigaE/
-AMIGAENAME = $(AMIGAEPATH)$(BASE).m
+AMIGAEPATH = $(TARGET_PATH)/AmigaE/
+AMIGAENAME = $(AMIGAEPATH)$(BASE_NAME).m
 $(AMIGAENAME): $(AMIGUS_SFD)
-	-@makedir $(AMIGAEPATH) ALL >NIL:
-	fd2pragma SPECIAL  18 INFILE $(AMIGUS_SFD) TO $(AMIGAEPATH)
+	-@$(MKDIR) $(AMIGAEPATH) $(MKDIR_SUFFIX)
+	$(FD2PRAGMA) SPECIAL  18 INFILE $(AMIGUS_SFD) TO $(AMIGAEPATH)
 
-GCCINLINEPATH = $(PATH)/C/inline/
-GCCINLINENAME = $(GCCINLINEPATH)$(BASE).h
+GCCINLINEPATH = $(TARGET_PATH)/C/inline/
+GCCINLINENAME = $(GCCINLINEPATH)$(BASE_NAME).h
 $(GCCINLINENAME): $(AMIGUS_SFD)
-	-@makedir $(GCCINLINEPATH) ALL >NIL:
-	fd2pragma SPECIAL  40 INFILE $(AMIGUS_SFD) TO $(GCCINLINEPATH)
+	-@$(MKDIR) $(GCCINLINEPATH) $(MKDIR_SUFFIX)
+	$(FD2PRAGMA) SPECIAL  40 INFILE $(AMIGUS_SFD) TO $(GCCINLINEPATH)
 
-PROTOPATH = $(PATH)/C/proto/
-PROTONAME = $(PROTOPATH)$(BASE).h
+PROTOPATH = $(TARGET_PATH)/C/proto/
+PROTONAME = $(PROTOPATH)$(BASE_NAME).h
 $(PROTONAME): $(AMIGUS_SFD)
-	-@makedir $(PROTOPATH) ALL >NIL:
-	fd2pragma SPECIAL  38 INFILE $(AMIGUS_SFD) TO $(PROTOPATH)
+	-@$(MKDIR) $(PROTOPATH) $(MKDIR_SUFFIX)
+	$(FD2PRAGMA) SPECIAL  38 INFILE $(AMIGUS_SFD) TO $(PROTOPATH)
 
-VBCCINLINEPATH = $(PATH)/C/inline/
-VBCCINLINENAME = $(VBCCINLINEPATH)$(BASE)_protos.h
+VBCCINLINEPATH = $(TARGET_PATH)/C/inline/
+VBCCINLINENAME = $(VBCCINLINEPATH)$(BASE_NAME)_protos.h
 $(VBCCINLINENAME): $(AMIGUS_SFD)
-	-@makedir $(VBCCINLINEPATH) ALL >NIL:
-	fd2pragma SPECIAL  70 INFILE $(AMIGUS_SFD) TO $(VBCCINLINEPATH)
+	-@$(MKDIR) $(VBCCINLINEPATH) $(MKDIR_SUFFIX)
+	$(FD2PRAGMA) SPECIAL  70 INFILE $(AMIGUS_SFD) TO $(VBCCINLINEPATH)
 
-LVOPATH = $(PATH)/ASM/lvo/
-LVONAME = $(LVOPATH)$(BASE)_lib.i
+LVOPATH = $(TARGET_PATH)/ASM/lvo/
+LVONAME = $(LVOPATH)$(BASE_NAME)_lib.i
 $(LVONAME): $(AMIGUS_SFD)
-	-@makedir $(LVOPATH) ALL >NIL:
-	fd2pragma SPECIAL  23 INFILE $(AMIGUS_SFD) TO $(LVOPATH)
+	-@$(MKDIR) $(LVOPATH) $(MKDIR_SUFFIX)
+	$(FD2PRAGMA) SPECIAL  23 INFILE $(AMIGUS_SFD) TO $(LVOPATH)
 
-FDPATH = $(PATH)/FD/
-FDNAME = $(FDPATH)$(BASE)_lib.fd
+FDPATH = $(TARGET_PATH)/FD/
+FDNAME = $(FDPATH)$(BASE_NAME)_lib.fd
 $(FDNAME): $(AMIGUS_SFD)
-	-@makedir $(FDPATH) ALL >NIL:
-	fd2pragma SPECIAL 110 INFILE $(AMIGUS_SFD) TO $(FDPATH) COMMENT
+	-@$(MKDIR) $(FDPATH) $(MKDIR_SUFFIX)
+	$(FD2PRAGMA) SPECIAL 110 INFILE $(AMIGUS_SFD) TO $(FDPATH) COMMENT
 
-CLIBPATH = $(PATH)/C/clib/
-CLIBNAME = $(CLIBPATH)$(BASE)_protos.h
+CLIBPATH = $(TARGET_PATH)/C/clib/
+CLIBNAME = $(CLIBPATH)$(BASE_NAME)_protos.h
 $(CLIBNAME): $(AMIGUS_SFD)
-	-@makedir $(CLIBPATH) ALL >NIL:
-	fd2pragma SPECIAL 111 INFILE $(AMIGUS_SFD) TO $(CLIBPATH) COMMENT
+	-@$(MKDIR) $(CLIBPATH) $(MKDIR_SUFFIX)
+	$(FD2PRAGMA) SPECIAL 111 INFILE $(AMIGUS_SFD) TO $(CLIBPATH) COMMENT
 # breaks it sometimes... COPYRIGHT $(AUTHOR)
 
 all: $(PRAGMANAME) $(AMIGAENAME) $(GCCINLINENAME) $(PROTONAME) \
      $(VBCCINLINENAME) $(LVONAME) $(FDNAME) $(CLIBNAME) \
      $(LIBRARYNAME) $(SFDNAME)
-	-@makedir $(PATH)/C/amigus ALL >NIL:
-	copy $(AMIGUS_INCLUDES)/amigus/#?.h $(PATH)/C/amigus/ ALL CLONE
-	copy $(AMIGUS_INCLUDES)/amigus/#?.i $(PATH)/C/amigus/ ALL CLONE
+	-@$(MKDIR) $(TARGET_PATH)/C/amigus $(MKDIR_SUFFIX)
+	$(CP) $(AMIGUS_INCLUDES)/amigus/$(WILDCARD).h $(TARGET_PATH)/C/amigus/ $(CP_SUFFIX)
+#	-@$(MKDIR) $(TARGET_PATH)/ASM/amigus $(MKDIR_SUFFIX)
+#	$(CP) $(AMIGUS_INCLUDES)/amigus/$(WILDCARD).i $(TARGET_PATH)/C/amigus/ $(CP_SUFFIX)
 
 clean:
-	-@delete $(PATH)/~((sfd)|(amigus)) ALL
+	-@$(RM) $(TARGET_PATH) $(RM_SUFFIX)
 
 # Prepare doing:
 # cp Makefile-Includes ~/Documents/FS-UAE/Shared/Projekte/AmiGUS/
