Base: Untested first implementation

--- a/Base/Makefile-Includes
+++ b/Base/Makefile-Includes
@@ -115,7 +115,7 @@ $(CLIBNAME): $(AMIGUS_SFD)
 
 all: $(PRAGMANAME) $(AMIGAENAME) $(GCCINLINENAME) $(PROTONAME) \
      $(VBCCINLINENAME) $(LVONAME) $(FDNAME) $(CLIBNAME) \
-     $(LIBRARYNAME) $(SFDNAME)
+     $(LIBRARYNAME) $(SFDNAME) $(AMIGUS_INCLUDES)/amigus/$(WILDCARD).*
 	-@$(MKDIR) $(TARGET_PATH)/C/amigus $(MKDIR_SUFFIX)
 	$(CP) $(AMIGUS_INCLUDES)/amigus/$(WILDCARD).h $(TARGET_PATH)/C/amigus/ $(CP_SUFFIX)
 #	-@$(MKDIR) $(TARGET_PATH)/ASM/amigus $(MKDIR_SUFFIX)
